src/test/deca/context/valid/homemade/test/test368_affectation_type_type.deca
// test valid de la règle 3.68
class A{
    int calcul(){
        int int;
        int =8;
        return int; 
    }
    
}

