src/test/deca/context/invalid/homemade/tests/test365_selection_nonclass_float.deca
// test invalide de la règle 3.65


class A{
    int livre;
}

{
    float x;
    x.livre = 8;
}